...
            Container(
              color: colorScheme.surface,
              child: Column(
                children: [
                  SearchBarWidget(
                    onTap: () => _onSearchTap(context),
                    hintText: 'Search products...',
                  ),
                  BlocListener<ProductsBloc, ProductsState>(
                    listener: (context, state) {
                      if (state is ProductsError) {
                        _showToast(state.message);
                      }
...
                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                            children: [
                              Text(
                                state is ProductsLoaded &&
                                        state.selectedCategory != null
                                    ? "${state.selectedCategory!.toUpperCase()} PRODUCTS"
                                    : "ALL PRODUCTS",
                                style: theme.textTheme.titleMedium?.copyWith(
                                  fontWeight: FontWeight.w600,
                                  letterSpacing: 0.5,
                                ),
                              ),
                              if (state is ProductsLoaded)
...
